@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2242] fixed agent crash on HP-UX when processing logrt[] items (asaveljevs,Sasha)
  - [ZBXNEXT-288] improved server performance by not storing function lastvalue in database (asaveljevs,Sasha)
  - [ZBX-1753] added permission check for trigger sound notifications (Aly)
  - [ZBX-2246] added trigger wizard for logrt item (AM)
